# workpoint

./: LICENSE  README.md  approximation.py  freq.py  main.py  max_min_find.py  phase.py  position_find.py  pyproject.toml  sinus_calc.py  sinus_definition.py  test.py  test2.py
archive/: fourier_self.py  fourier_series.py  stat.py
auxiliary_files/: filtration_phase.py  phase_list.py  stat.py
fourier/: fourier_fft.py  fourier_self.py  fourier_series.py
frequency_calculation/: freq.py  freq_for_smooth.py
measurements/: scope_1.csv  scope_2.csv  scope_3.csv  scope_30.csv  scope_31.csv  scope_32.csv  scope_33.csv  scope_34.csv  scope_35.csv  scope_4.csv  scope_5.csv  scope_52.csv  scope_53.csv  scope_54.csv  scope_55.csv  scope_56.csv  scope_57.csv  scope_58.csv  scope_59.csv
project/: approximation.py  filtration.py  main.py  phase.py  sinus_definition.py
