[tool.poetry]
name = "workpoint"
version = "0.1.0"
description = ""
authors = ["ilyadenu <ilyadenu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
scipy = "^1.11.4"
pandas = "^2.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
